ProyectoDjango/ClansOfWeb/analizador_lexico_sintactico/html/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> doc
Rule 1     doc -> html_tag head body HTML_FINISH
Rule 2     head -> head_tag head_elements HEAD_FINISH
Rule 3     body -> body_tag elements BODY_FINISH
Rule 4     section -> section_tag elements SECTION_FINISH
Rule 5     aside -> aside_tag elements ASIDE_FINISH
Rule 6     article -> article_tag elements ARTICLE_FINISH
Rule 7     nav -> nav_tag elements NAV_FINISH
Rule 8     ul -> ul_tag list_elements UL_FINISH
Rule 9     ol -> ol_tag list_elements OL_FINISH
Rule 10    footer -> footer_tag elements FOOTER_FINISH
Rule 11    header -> header_tag elements HEADER_FINISH
Rule 12    table -> table_tag table_elements TABLE_FINISH
Rule 13    tr -> tr_tag table_elements_basic TR_FINISH
Rule 14    title -> title_tag TEXT TITLE_FINISH
Rule 15    link -> link_tag
Rule 16    p -> p_tag TEXT P_FINISH
Rule 17    h -> h_tag TEXT H_FINISH
Rule 18    li -> li_tag TEXT LI_FINISH
Rule 19    img -> img_tag
Rule 20    a -> a_tag TEXT A_FINISH
Rule 21    br -> br_tag
Rule 22    th -> th_tag TEXT TH_FINISH
Rule 23    td -> td_tag TEXT TD_FINISH
Rule 24    caption -> caption_tag TEXT CAPTION_FINISH
Rule 25    html_tag -> HTML attributes FINISH
Rule 26    head_tag -> HEAD attributes FINISH
Rule 27    body_tag -> BODY attributes FINISH
Rule 28    section_tag -> SECTION attributes FINISH
Rule 29    aside_tag -> ASIDE attributes FINISH
Rule 30    article_tag -> ARTICLE attributes FINISH
Rule 31    nav_tag -> NAV attributes FINISH
Rule 32    ul_tag -> UL attributes FINISH
Rule 33    ol_tag -> OL attributes FINISH
Rule 34    footer_tag -> FOOTER attributes FINISH
Rule 35    header_tag -> HEADER attributes FINISH
Rule 36    table_tag -> TABLE attributes FINISH
Rule 37    title_tag -> TITLE_INITIAL attributes FINISH
Rule 38    link_tag -> LINK attributes FINISH
Rule 39    p_tag -> P attributes FINISH
Rule 40    h_tag -> H attributes FINISH
Rule 41    li_tag -> LI attributes FINISH
Rule 42    img_tag -> IMG attributes FINISH
Rule 43    tr_tag -> TR attributes FINISH
Rule 44    td_tag -> TD attributes FINISH
Rule 45    th_tag -> TH attributes FINISH
Rule 46    caption_tag -> CAPTION attributes FINISH
Rule 47    a_tag -> A attributes FINISH
Rule 48    br_tag -> BR
Rule 49    elements -> empty
Rule 50    elements -> elements element
Rule 51    element -> section
Rule 52    element -> aside
Rule 53    element -> article
Rule 54    element -> nav
Rule 55    element -> ul
Rule 56    element -> ol
Rule 57    element -> footer
Rule 58    element -> header
Rule 59    element -> table
Rule 60    element -> p
Rule 61    element -> h
Rule 62    element -> img
Rule 63    element -> a
Rule 64    element -> br
Rule 65    list_elements -> empty
Rule 66    list_elements -> list_elements list_element
Rule 67    list_element -> li
Rule 68    table_elements -> empty
Rule 69    table_elements -> table_elements table_element
Rule 70    table_element -> caption
Rule 71    table_element -> tr
Rule 72    table_elements_basic -> empty
Rule 73    table_elements_basic -> table_elements_basic table_element_basic
Rule 74    table_element_basic -> th
Rule 75    table_element_basic -> td
Rule 76    head_elements -> empty
Rule 77    head_elements -> head_elements head_element
Rule 78    head_element -> title
Rule 79    head_element -> link
Rule 80    attributes -> empty
Rule 81    attributes -> attributes attribute
Rule 82    attribute -> ID EQUAL VALUE
Rule 83    attribute -> CLASS EQUAL VALUE
Rule 84    attribute -> HREF EQUAL VALUE
Rule 85    attribute -> SRC EQUAL VALUE
Rule 86    attribute -> TITLE EQUAL VALUE
Rule 87    attribute -> LANG EQUAL VALUE
Rule 88    empty -> <empty>

Terminals, with rules where they appear

A                    : 47
ARTICLE              : 30
ARTICLE_FINISH       : 6
ASIDE                : 29
ASIDE_FINISH         : 5
A_FINISH             : 20
BODY                 : 27
BODY_FINISH          : 3
BR                   : 48
CAPTION              : 46
CAPTION_FINISH       : 24
CLASS                : 83
EQUAL                : 82 83 84 85 86 87
FINISH               : 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47
FOOTER               : 34
FOOTER_FINISH        : 10
H                    : 40
HEAD                 : 26
HEADER               : 35
HEADER_FINISH        : 11
HEAD_FINISH          : 2
HREF                 : 84
HTML                 : 25
HTML_FINISH          : 1
H_FINISH             : 17
ID                   : 82
IMG                  : 42
LANG                 : 87
LI                   : 41
LINK                 : 38
LI_FINISH            : 18
NAV                  : 31
NAV_FINISH           : 7
OL                   : 33
OL_FINISH            : 9
P                    : 39
P_FINISH             : 16
SECTION              : 28
SECTION_FINISH       : 4
SRC                  : 85
TABLE                : 36
TABLE_FINISH         : 12
TD                   : 44
TD_FINISH            : 23
TEXT                 : 14 16 17 18 20 22 23 24
TH                   : 45
TH_FINISH            : 22
TITLE                : 86
TITLE_FINISH         : 14
TITLE_INITIAL        : 37
TR                   : 43
TR_FINISH            : 13
UL                   : 32
UL_FINISH            : 8
VALUE                : 82 83 84 85 86 87
error                : 

Nonterminals, with rules where they appear

a                    : 63
a_tag                : 20
article              : 53
article_tag          : 6
aside                : 52
aside_tag            : 5
attribute            : 81
attributes           : 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 81
body                 : 1
body_tag             : 3
br                   : 64
br_tag               : 21
caption              : 70
caption_tag          : 24
doc                  : 0
element              : 50
elements             : 3 4 5 6 7 10 11 50
empty                : 49 65 68 72 76 80
footer               : 57
footer_tag           : 10
h                    : 61
h_tag                : 17
head                 : 1
head_element         : 77
head_elements        : 2 77
head_tag             : 2
header               : 58
header_tag           : 11
html_tag             : 1
img                  : 62
img_tag              : 19
li                   : 67
li_tag               : 18
link                 : 79
link_tag             : 15
list_element         : 66
list_elements        : 8 9 66
nav                  : 54
nav_tag              : 7
ol                   : 56
ol_tag               : 9
p                    : 60
p_tag                : 16
section              : 51
section_tag          : 4
table                : 59
table_element        : 69
table_element_basic  : 73
table_elements       : 12 69
table_elements_basic : 13 73
table_tag            : 12
td                   : 75
td_tag               : 23
th                   : 74
th_tag               : 22
title                : 78
title_tag            : 14
tr                   : 71
tr_tag               : 13
ul                   : 55
ul_tag               : 8

Parsing method: LALR

state 0

    (0) S' -> . doc
    (1) doc -> . html_tag head body HTML_FINISH
    (25) html_tag -> . HTML attributes FINISH

    HTML            shift and go to state 3

    doc                            shift and go to state 1
    html_tag                       shift and go to state 2

state 1

    (0) S' -> doc .



state 2

    (1) doc -> html_tag . head body HTML_FINISH
    (2) head -> . head_tag head_elements HEAD_FINISH
    (26) head_tag -> . HEAD attributes FINISH

    HEAD            shift and go to state 6

    head                           shift and go to state 4
    head_tag                       shift and go to state 5

state 3

    (25) html_tag -> HTML . attributes FINISH
    (80) attributes -> . empty
    (81) attributes -> . attributes attribute
    (88) empty -> .

    FINISH          reduce using rule 88 (empty -> .)
    ID              reduce using rule 88 (empty -> .)
    CLASS           reduce using rule 88 (empty -> .)
    HREF            reduce using rule 88 (empty -> .)
    SRC             reduce using rule 88 (empty -> .)
    TITLE           reduce using rule 88 (empty -> .)
    LANG            reduce using rule 88 (empty -> .)

    attributes                     shift and go to state 7
    empty                          shift and go to state 8

state 4

    (1) doc -> html_tag head . body HTML_FINISH
    (3) body -> . body_tag elements BODY_FINISH
    (27) body_tag -> . BODY attributes FINISH

    BODY            shift and go to state 11

    body                           shift and go to state 9
    body_tag                       shift and go to state 10

state 5

    (2) head -> head_tag . head_elements HEAD_FINISH
    (76) head_elements -> . empty
    (77) head_elements -> . head_elements head_element
    (88) empty -> .

    HEAD_FINISH     reduce using rule 88 (empty -> .)
    TITLE_INITIAL   reduce using rule 88 (empty -> .)
    LINK            reduce using rule 88 (empty -> .)

    head_elements                  shift and go to state 12
    empty                          shift and go to state 13

state 6

    (26) head_tag -> HEAD . attributes FINISH
    (80) attributes -> . empty
    (81) attributes -> . attributes attribute
    (88) empty -> .

    FINISH          reduce using rule 88 (empty -> .)
    ID              reduce using rule 88 (empty -> .)
    CLASS           reduce using rule 88 (empty -> .)
    HREF            reduce using rule 88 (empty -> .)
    SRC             reduce using rule 88 (empty -> .)
    TITLE           reduce using rule 88 (empty -> .)
    LANG            reduce using rule 88 (empty -> .)

    attributes                     shift and go to state 14
    empty                          shift and go to state 8

state 7

    (25) html_tag -> HTML attributes . FINISH
    (81) attributes -> attributes . attribute
    (82) attribute -> . ID EQUAL VALUE
    (83) attribute -> . CLASS EQUAL VALUE
    (84) attribute -> . HREF EQUAL VALUE
    (85) attribute -> . SRC EQUAL VALUE
    (86) attribute -> . TITLE EQUAL VALUE
    (87) attribute -> . LANG EQUAL VALUE

    FINISH          shift and go to state 15
    ID              shift and go to state 17
    CLASS           shift and go to state 18
    HREF            shift and go to state 19
    SRC             shift and go to state 20
    TITLE           shift and go to state 21
    LANG            shift and go to state 22

    attribute                      shift and go to state 16

state 8

    (80) attributes -> empty .

    FINISH          reduce using rule 80 (attributes -> empty .)
    ID              reduce using rule 80 (attributes -> empty .)
    CLASS           reduce using rule 80 (attributes -> empty .)
    HREF            reduce using rule 80 (attributes -> empty .)
    SRC             reduce using rule 80 (attributes -> empty .)
    TITLE           reduce using rule 80 (attributes -> empty .)
    LANG            reduce using rule 80 (attributes -> empty .)


state 9

    (1) doc -> html_tag head body . HTML_FINISH

    HTML_FINISH     shift and go to state 23


state 10

    (3) body -> body_tag . elements BODY_FINISH
    (49) elements -> . empty
    (50) elements -> . elements element
    (88) empty -> .

    BODY_FINISH     reduce using rule 88 (empty -> .)
    SECTION         reduce using rule 88 (empty -> .)
    ASIDE           reduce using rule 88 (empty -> .)
    ARTICLE         reduce using rule 88 (empty -> .)
    NAV             reduce using rule 88 (empty -> .)
    UL              reduce using rule 88 (empty -> .)
    OL              reduce using rule 88 (empty -> .)
    FOOTER          reduce using rule 88 (empty -> .)
    HEADER          reduce using rule 88 (empty -> .)
    TABLE           reduce using rule 88 (empty -> .)
    P               reduce using rule 88 (empty -> .)
    H               reduce using rule 88 (empty -> .)
    IMG             reduce using rule 88 (empty -> .)
    A               reduce using rule 88 (empty -> .)
    BR              reduce using rule 88 (empty -> .)

    elements                       shift and go to state 24
    empty                          shift and go to state 25

state 11

    (27) body_tag -> BODY . attributes FINISH
    (80) attributes -> . empty
    (81) attributes -> . attributes attribute
    (88) empty -> .

    FINISH          reduce using rule 88 (empty -> .)
    ID              reduce using rule 88 (empty -> .)
    CLASS           reduce using rule 88 (empty -> .)
    HREF            reduce using rule 88 (empty -> .)
    SRC             reduce using rule 88 (empty -> .)
    TITLE           reduce using rule 88 (empty -> .)
    LANG            reduce using rule 88 (empty -> .)

    attributes                     shift and go to state 26
    empty                          shift and go to state 8

state 12

    (2) head -> head_tag head_elements . HEAD_FINISH
    (77) head_elements -> head_elements . head_element
    (78) head_element -> . title
    (79) head_element -> . link
    (14) title -> . title_tag TEXT TITLE_FINISH
    (15) link -> . link_tag
    (37) title_tag -> . TITLE_INITIAL attributes FINISH
    (38) link_tag -> . LINK attributes FINISH

    HEAD_FINISH     shift and go to state 27
    TITLE_INITIAL   shift and go to state 33
    LINK            shift and go to state 34

    head_element                   shift and go to state 28
    title                          shift and go to state 29
    link                           shift and go to state 30
    title_tag                      shift and go to state 31
    link_tag                       shift and go to state 32

state 13

    (76) head_elements -> empty .

    HEAD_FINISH     reduce using rule 76 (head_elements -> empty .)
    TITLE_INITIAL   reduce using rule 76 (head_elements -> empty .)
    LINK            reduce using rule 76 (head_elements -> empty .)


state 14

    (26) head_tag -> HEAD attributes . FINISH
    (81) attributes -> attributes . attribute
    (82) attribute -> . ID EQUAL VALUE
    (83) attribute -> . CLASS EQUAL VALUE
    (84) attribute -> . HREF EQUAL VALUE
    (85) attribute -> . SRC EQUAL VALUE
    (86) attribute -> . TITLE EQUAL VALUE
    (87) attribute -> . LANG EQUAL VALUE

    FINISH          shift and go to state 35
    ID              shift and go to state 17
    CLASS           shift and go to state 18
    HREF            shift and go to state 19
    SRC             shift and go to state 20
    TITLE           shift and go to state 21
    LANG            shift and go to state 22

    attribute                      shift and go to state 16

state 15

    (25) html_tag -> HTML attributes FINISH .

    HEAD            reduce using rule 25 (html_tag -> HTML attributes FINISH .)


state 16

    (81) attributes -> attributes attribute .

    FINISH          reduce using rule 81 (attributes -> attributes attribute .)
    ID              reduce using rule 81 (attributes -> attributes attribute .)
    CLASS           reduce using rule 81 (attributes -> attributes attribute .)
    HREF            reduce using rule 81 (attributes -> attributes attribute .)
    SRC             reduce using rule 81 (attributes -> attributes attribute .)
    TITLE           reduce using rule 81 (attributes -> attributes attribute .)
    LANG            reduce using rule 81 (attributes -> attributes attribute .)


state 17

    (82) attribute -> ID . EQUAL VALUE

    EQUAL           shift and go to state 36


state 18

    (83) attribute -> CLASS . EQUAL VALUE

    EQUAL           shift and go to state 37


state 19

    (84) attribute -> HREF . EQUAL VALUE

    EQUAL           shift and go to state 38


state 20

    (85) attribute -> SRC . EQUAL VALUE

    EQUAL           shift and go to state 39


state 21

    (86) attribute -> TITLE . EQUAL VALUE

    EQUAL           shift and go to state 40


state 22

    (87) attribute -> LANG . EQUAL VALUE

    EQUAL           shift and go to state 41


state 23

    (1) doc -> html_tag head body HTML_FINISH .

    $end            reduce using rule 1 (doc -> html_tag head body HTML_FINISH .)


state 24

    (3) body -> body_tag elements . BODY_FINISH
    (50) elements -> elements . element
    (51) element -> . section
    (52) element -> . aside
    (53) element -> . article
    (54) element -> . nav
    (55) element -> . ul
    (56) element -> . ol
    (57) element -> . footer
    (58) element -> . header
    (59) element -> . table
    (60) element -> . p
    (61) element -> . h
    (62) element -> . img
    (63) element -> . a
    (64) element -> . br
    (4) section -> . section_tag elements SECTION_FINISH
    (5) aside -> . aside_tag elements ASIDE_FINISH
    (6) article -> . article_tag elements ARTICLE_FINISH
    (7) nav -> . nav_tag elements NAV_FINISH
    (8) ul -> . ul_tag list_elements UL_FINISH
    (9) ol -> . ol_tag list_elements OL_FINISH
    (10) footer -> . footer_tag elements FOOTER_FINISH
    (11) header -> . header_tag elements HEADER_FINISH
    (12) table -> . table_tag table_elements TABLE_FINISH
    (16) p -> . p_tag TEXT P_FINISH
    (17) h -> . h_tag TEXT H_FINISH
    (19) img -> . img_tag
    (20) a -> . a_tag TEXT A_FINISH
    (21) br -> . br_tag
    (28) section_tag -> . SECTION attributes FINISH
    (29) aside_tag -> . ASIDE attributes FINISH
    (30) article_tag -> . ARTICLE attributes FINISH
    (31) nav_tag -> . NAV attributes FINISH
    (32) ul_tag -> . UL attributes FINISH
    (33) ol_tag -> . OL attributes FINISH
    (34) footer_tag -> . FOOTER attributes FINISH
    (35) header_tag -> . HEADER attributes FINISH
    (36) table_tag -> . TABLE attributes FINISH
    (39) p_tag -> . P attributes FINISH
    (40) h_tag -> . H attributes FINISH
    (42) img_tag -> . IMG attributes FINISH
    (47) a_tag -> . A attributes FINISH
    (48) br_tag -> . BR

    BODY_FINISH     shift and go to state 42
    SECTION         shift and go to state 72
    ASIDE           shift and go to state 73
    ARTICLE         shift and go to state 74
    NAV             shift and go to state 75
    UL              shift and go to state 76
    OL              shift and go to state 77
    FOOTER          shift and go to state 78
    HEADER          shift and go to state 79
    TABLE           shift and go to state 80
    P               shift and go to state 81
    H               shift and go to state 82
    IMG             shift and go to state 83
    A               shift and go to state 84
    BR              shift and go to state 85

    element                        shift and go to state 43
    section                        shift and go to state 44
    aside                          shift and go to state 45
    article                        shift and go to state 46
    nav                            shift and go to state 47
    ul                             shift and go to state 48
    ol                             shift and go to state 49
    footer                         shift and go to state 50
    header                         shift and go to state 51
    table                          shift and go to state 52
    p                              shift and go to state 53
    h                              shift and go to state 54
    img                            shift and go to state 55
    a                              shift and go to state 56
    br                             shift and go to state 57
    section_tag                    shift and go to state 58
    aside_tag                      shift and go to state 59
    article_tag                    shift and go to state 60
    nav_tag                        shift and go to state 61
    ul_tag                         shift and go to state 62
    ol_tag                         shift and go to state 63
    footer_tag                     shift and go to state 64
    header_tag                     shift and go to state 65
    table_tag                      shift and go to state 66
    p_tag                          shift and go to state 67
    h_tag                          shift and go to state 68
    img_tag                        shift and go to state 69
    a_tag                          shift and go to state 70
    br_tag                         shift and go to state 71

state 25

    (49) elements -> empty .

    BODY_FINISH     reduce using rule 49 (elements -> empty .)
    SECTION         reduce using rule 49 (elements -> empty .)
    ASIDE           reduce using rule 49 (elements -> empty .)
    ARTICLE         reduce using rule 49 (elements -> empty .)
    NAV             reduce using rule 49 (elements -> empty .)
    UL              reduce using rule 49 (elements -> empty .)
    OL              reduce using rule 49 (elements -> empty .)
    FOOTER          reduce using rule 49 (elements -> empty .)
    HEADER          reduce using rule 49 (elements -> empty .)
    TABLE           reduce using rule 49 (elements -> empty .)
    P               reduce using rule 49 (elements -> empty .)
    H               reduce using rule 49 (elements -> empty .)
    IMG             reduce using rule 49 (elements -> empty .)
    A               reduce using rule 49 (elements -> empty .)
    BR              reduce using rule 49 (elements -> empty .)
    SECTION_FINISH  reduce using rule 49 (elements -> empty .)
    ASIDE_FINISH    reduce using rule 49 (elements -> empty .)
    ARTICLE_FINISH  reduce using rule 49 (elements -> empty .)
    NAV_FINISH      reduce using rule 49 (elements -> empty .)
    FOOTER_FINISH   reduce using rule 49 (elements -> empty .)
    HEADER_FINISH   reduce using rule 49 (elements -> empty .)


state 26

    (27) body_tag -> BODY attributes . FINISH
    (81) attributes -> attributes . attribute
    (82) attribute -> . ID EQUAL VALUE
    (83) attribute -> . CLASS EQUAL VALUE
    (84) attribute -> . HREF EQUAL VALUE
    (85) attribute -> . SRC EQUAL VALUE
    (86) attribute -> . TITLE EQUAL VALUE
    (87) attribute -> . LANG EQUAL VALUE

    FINISH          shift and go to state 86
    ID              shift and go to state 17
    CLASS           shift and go to state 18
    HREF            shift and go to state 19
    SRC             shift and go to state 20
    TITLE           shift and go to state 21
    LANG            shift and go to state 22

    attribute                      shift and go to state 16

state 27

    (2) head -> head_tag head_elements HEAD_FINISH .

    BODY            reduce using rule 2 (head -> head_tag head_elements HEAD_FINISH .)


state 28

    (77) head_elements -> head_elements head_element .

    HEAD_FINISH     reduce using rule 77 (head_elements -> head_elements head_element .)
    TITLE_INITIAL   reduce using rule 77 (head_elements -> head_elements head_element .)
    LINK            reduce using rule 77 (head_elements -> head_elements head_element .)


state 29

    (78) head_element -> title .

    HEAD_FINISH     reduce using rule 78 (head_element -> title .)
    TITLE_INITIAL   reduce using rule 78 (head_element -> title .)
    LINK            reduce using rule 78 (head_element -> title .)


state 30

    (79) head_element -> link .

    HEAD_FINISH     reduce using rule 79 (head_element -> link .)
    TITLE_INITIAL   reduce using rule 79 (head_element -> link .)
    LINK            reduce using rule 79 (head_element -> link .)


state 31

    (14) title -> title_tag . TEXT TITLE_FINISH

    TEXT            shift and go to state 87


state 32

    (15) link -> link_tag .

    HEAD_FINISH     reduce using rule 15 (link -> link_tag .)
    TITLE_INITIAL   reduce using rule 15 (link -> link_tag .)
    LINK            reduce using rule 15 (link -> link_tag .)


state 33

    (37) title_tag -> TITLE_INITIAL . attributes FINISH
    (80) attributes -> . empty
    (81) attributes -> . attributes attribute
    (88) empty -> .

    FINISH          reduce using rule 88 (empty -> .)
    ID              reduce using rule 88 (empty -> .)
    CLASS           reduce using rule 88 (empty -> .)
    HREF            reduce using rule 88 (empty -> .)
    SRC             reduce using rule 88 (empty -> .)
    TITLE           reduce using rule 88 (empty -> .)
    LANG            reduce using rule 88 (empty -> .)

    attributes                     shift and go to state 88
    empty                          shift and go to state 8

state 34

    (38) link_tag -> LINK . attributes FINISH
    (80) attributes -> . empty
    (81) attributes -> . attributes attribute
    (88) empty -> .

    FINISH          reduce using rule 88 (empty -> .)
    ID              reduce using rule 88 (empty -> .)
    CLASS           reduce using rule 88 (empty -> .)
    HREF            reduce using rule 88 (empty -> .)
    SRC             reduce using rule 88 (empty -> .)
    TITLE           reduce using rule 88 (empty -> .)
    LANG            reduce using rule 88 (empty -> .)

    attributes                     shift and go to state 89
    empty                          shift and go to state 8

state 35

    (26) head_tag -> HEAD attributes FINISH .

    HEAD_FINISH     reduce using rule 26 (head_tag -> HEAD attributes FINISH .)
    TITLE_INITIAL   reduce using rule 26 (head_tag -> HEAD attributes FINISH .)
    LINK            reduce using rule 26 (head_tag -> HEAD attributes FINISH .)


state 36

    (82) attribute -> ID EQUAL . VALUE

    VALUE           shift and go to state 90


state 37

    (83) attribute -> CLASS EQUAL . VALUE

    VALUE           shift and go to state 91


state 38

    (84) attribute -> HREF EQUAL . VALUE

    VALUE           shift and go to state 92


state 39

    (85) attribute -> SRC EQUAL . VALUE

    VALUE           shift and go to state 93


state 40

    (86) attribute -> TITLE EQUAL . VALUE

    VALUE           shift and go to state 94


state 41

    (87) attribute -> LANG EQUAL . VALUE

    VALUE           shift and go to state 95


state 42

    (3) body -> body_tag elements BODY_FINISH .

    HTML_FINISH     reduce using rule 3 (body -> body_tag elements BODY_FINISH .)


state 43

    (50) elements -> elements element .
